--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,11 @@ body{
     margin:20px;
     display:flex;
 }
+
+.menuDesc span{
+    white-space: normal;
+}
+
+.dishListPara span{
+   // font-size:14px;
+}
