header and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<mat-toolbar color="primary"><span>Angular1 Application</span></mat-toolbar>
+<app-header></app-header>
+
 <app-menu></app-menu>
+
+<app-footer></app-footer>
