--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,8 +6,8 @@
     fxLayoutGap="20px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
-    <mat-card>
+  <div fxFlex="40" >
+    <mat-card >
       <mat-card-header>
         <mat-card-title>
           <h3>{{dish.name | uppercase}}</h3>
@@ -18,14 +18,15 @@
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
+          <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
       </mat-card-actions>
     </mat-card>
   </div>
   
-  <div fxFlex="40" *ngIf="dish">
-  <mat-list>  
+  <div fxFlex="40" >
+  <mat-list >  
       <h3> Comments </h3>
     <mat-list-item *ngFor="let i of dish.comments">
       <p class="dishListPara">
