--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,7 +56,7 @@
 
   <div fxFlex>
     <h3>Corporate Leadership</h3>
-    <mat-list >
+    <mat-list *ngIf="leaders">
       <mat-list-item *ngFor="let leader of leaders">
         <img matListAvatar src={{leader.image}} alt={{leader.name}}>
         <h5 matLine> {{leader.name}} {{leader.abbr}} </h5>
@@ -69,4 +69,8 @@
       </mat-list-item>
     </mat-list>
   </div>
+    <div fxFlex [hidden]="leaders">
+        <mat-spinner></mat-spinner><h4>Loading...Please wait</h4>
+      </div>
+  
 </div>
