--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,9 +56,9 @@
 
   <div fxFlex>
     <h3>Corporate Leadership</h3>
-    <mat-list *ngIf="leaders">
+    <mat-list *ngIf="leaders" [@expand]>
       <mat-list-item *ngFor="let leader of leaders">
-        <img matListAvatar src={{leader.image}} alt={{leader.name}}>
+        <img matListAvatar src="{{BaseURL + leader.image}}" alt={{leader.name}}>
         <h5 matLine> {{leader.name}} {{leader.abbr}} </h5>
         <p matLine>
             <span> {{leader.designation}} </span>
@@ -69,8 +69,12 @@
       </mat-list-item>
     </mat-list>
   </div>
-    <div fxFlex [hidden]="leaders">
-        <mat-spinner></mat-spinner><h4>Loading...Please wait</h4>
-      </div>
+  <div fxFlex [hidden]="leaders || leaderErrMess">
+    <mat-spinner></mat-spinner><h4>Loading...Please wait</h4>
+  </div>
+  <div fxFlex *ngIf="leaderErrMess">
+    <h2>Error</h2>
+    <h4>{{leaderErrMess}}</h4>
+  </div>
   
 </div>
