--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,38 +6,82 @@
     fxLayoutGap="20px" 
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40" >
-    <mat-card *ngIf="dish">
+  <div fxFlex="50" *ngIf="dish" [@visibility]="visibility" [@expand]>
+    <mat-card >
       <mat-card-header>
         <mat-card-title>
           <h3>{{dish.name | uppercase}}</h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+      <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
       <mat-card-content>
         <p>{{dish.description}}</p>
       </mat-card-content>
       <mat-card-actions>
-          <button mat-button (click)="goBack()">BACK</button>
+        <button mat-button [routerLink]="['/dishdetail',prev]">
+          <span class="fa fa-chevron-left fa-lg"></span>
+        </button>
+        <button mat-button (click)="goBack()">BACK</button>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail',prev]">
+          <span class="fa fa-chevron-right fa-lg"></span>
+        </button>
       </mat-card-actions>
     </mat-card>
   </div>
   
-  <div fxFlex="40" >
-  <mat-list *ngIf="dish">  
+  <div fxFlex="50" *ngIf="dish" [@visibility]="visibility" [@expand]>
+  <mat-list class="full-width">
       <h3> Comments </h3>
     <mat-list-item *ngFor="let comment of dish.comments">
       <p class="dishListPara">
         <span matLine> {{comment.comment}} </span>
-        <span matLine>{{comment.rating}} Stars</span>
+        <span matLine> {{comment.rating}} Stars</span>
         <span matLine>--{{comment.author}} {{comment.date | date}}</span>
       </p>
     </mat-list-item>
   </mat-list>
+  <mat-list *ngIf="dishDetailForm.valid">
+      <mat-list-item >
+          <p class="dishListPara">
+            <span matLine> {{dishDetailForm.value.comment}} </span>
+            <span matLine> {{dishDetailForm.value.rating}} Stars</span>
+            <span matLine>--{{dishDetailForm.value.author}} </span>
+          </p>
+        </mat-list-item>
+    </mat-list>
+  <form novalidate class="full-width" [formGroup]="dishDetailForm" #ddform="ngForm" (ngSubmit)="onSubmit()"> 
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">
+            {{ formErrors.author }}
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <p>          
+        <mat-slider thumbLabel formControlName="rating" tickInterval="1" max="5"></mat-slider>      
+      </p> 
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required>              
+          </textarea>
+          <mat-error *ngIf="formErrors.comment">
+              {{ formErrors.comment}}
+          </mat-error>
+        </mat-form-field>
+      </p>      
+      <button type="submit" mat-button class="background-primary text-floral-white"
+        [disabled]="dishDetailForm.invalid">Submit</button>
+    </form>
 </div>
-<div fxFlex [hidden]="dish">
-    <mat-spinner></mat-spinner><h4>Loading...Please wait</h4>
-  </div>
+<div fxFlex [hidden]="dish || errMess">
+  <mat-spinner></mat-spinner><h4>Loading...Please wait</h4>
+</div>
+<div fxFlex *ngIf="errMess">
+  <h2>Error</h2>
+  <h4>{{errMess}}</h4>
+</div>
 </div>
