--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,18 +9,22 @@
     </div>
   </div>
   
-  <div fxFlex *ngIf="dishes">
+  <div fxFlex *ngIf="dishes" [@expand]>
     <mat-grid-list cols="2" rowHeight="200px">
-        <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]"> 
-        <img height="200px" src={{dish.image}} alt={{dish.name}}>
+        <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]" appHighlight> 
+        <img height="200px" [src]="BaseURL+ dish.image" alt={{dish.name}}>
         <mat-grid-tile-footer>
             <h1>{{dish.name | uppercase}}</h1>
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div fxFlex [hidden]="dishes">
+  <div fxFlex [hidden]="dishes || errMess">
     <mat-spinner></mat-spinner><h4>Loading...Please wait</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
 
   <!--<div fxFlex *ngIf="selectedDish">
